Bug 491719 - Ctrl+H and Ctrl+Maj+H both display an empty history, r=mak77